--- a/Practice/Practice.csproj
+++ b/Practice/Practice.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="LeetCode75\DP\" />
+  </ItemGroup>
+
 </Project>
