--- a/Practice/Practice.csproj
+++ b/Practice/Practice.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <StartupObject>Practice.Program</StartupObject>
   </PropertyGroup>
 
@@ -17,10 +17,6 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="LeetCode75\DP\" />
   </ItemGroup>
 
 </Project>
